# dvswitch-voc

./: CMakeLists.txt  COPYING  ChangeLog  Makefile  README.md
cmake/: Symlink.cmake
data/: CMakeLists.txt  Makefile
debian/: changelog  control  copyright  dvsink-voc.install  dvsink.install  dvsource.install  dvswitch-voc.install  dvswitch.install  rules
doc/: CMakeLists.txt  README  design-notes  dvsink-command.1  dvsink-files-voc.1  dvsink-files.1  dvsource-alsa.1  dvsource-dvgrab.1  dvsource-file-voc.1  dvsource-file.1  dvswitch-voc.1  dvswitch.1  inefficiencies
src/: CMakeLists.txt  Makefile  auto_codec.cpp  auto_codec.hpp  auto_fd.hpp  auto_handle.hpp  auto_pipe.cpp  auto_pipe.hpp  avcodec_wrap.h  config.c  config.h  dif.c  dif.h  dif_audio.c  dv_display_widget.cpp  dv_display_widget.hpp  dv_selector_widget.cpp  dv_selector_widget.hpp  dvsink-command.c  dvsink-files.c  dvsource-alsa.c  dvsource-dvgrab.c  dvsource-file.c  dvsource-firewire.c  dvswitch.cpp  format_dialog.cpp  format_dialog.hpp  frame.c  frame.h  frame_pool.cpp  frame_pool.hpp  frame_timer.c  frame_timer.h  geometry.h  geometry.hpp  gui.hpp  mixer.cpp  mixer.hpp  mixer_window.cpp  mixer_window.hpp  (+14 more)
tests/: CMakeLists.txt  Makefile  mixer.cpp  pic_in_pic.cpp  ring_buffer.cpp
